Its a canvas carousel

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><script src="direction.js"></script><canvas id="demo" height="400" width="400" style="background:#000;" />
+<!DOCTYPE html><script src="direction.js"></script>
