major work, renders most of comix-ngn worthless :D

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<!DOCTYPE html><script src="direction.js"></script>
+<!DOCTYPE html><script src="direction.min.js"></script><script>var a;function b(){a=new direction("img/oots0001.gif img/oots0002.gif img/oots0003.gif img/oots0004.gif img/oots0005.gif img/oots0006.gif img/oots0007.gif img/oots0008.gif img/oots0009.gif img/oots0010.gif img/oots0011.gif img/oots0012.gif img/oots0013.gif img/oots0014.gif img/oots0015.gif img/oots0016.gif img/oots0017.gif img/oots0018.gif img/oots0019.gif img/oots0020.gif".split(" "));a.next();window.setInterval(a.next,2E3)}
+window.addEventListener?window.addEventListener("load",b,!1):window.attachEvent?window.attachEvent("onload",b):window.onload=b;</script>
