--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
         </ul>
       </header>
       <section>
-        <h1>
-<a id="directionjs" class="anchor" href="#directionjs" aria-hidden="true"><span class="octicon octicon-link"></span></a>direction.js</h1>
-
-<p>MicroLib Canvas Carousel built for <a href="http://comixngn.js.org/">comix-ngn</a> as smaller, canvas only alternative to <a href="http://kenwheeler.github.io/slick/">Swipe</a>, <a href="https://github.com/thebird/swipe">Slack</a>, <a href="http://getbootstrap.com/javascript/">Bootstrap Carousel</a>, and <a href="https://www.google.com/webhp?sourceid=chrome-instant&amp;ion=1&amp;espv=2&amp;es_th=1&amp;ie=UTF-8#q=carousels&amp;es_th=1">other carousels</a>.</p>
-
-<p><strong><em>Since its Canvas only, it doesn't require any CSS</em></strong></p>
-
+       <div id="me"></div>
+        <script src="direction.min.js"></script>
+        <script>var a;function b(){a=new direction("oots0001.gif oots0002.gif oots0003.gif oots0004.gif oots0005.gif oots0006.gif oots0007.gif oots0008.gif oots0009.gif oots0010.gif oots0011.gif oots0012.gif oots0013.gif oots0014.gif oots0015.gif oots0016.gif oots0017.gif oots0018.gif oots0019.gif oots0020.gif".split(" "),document.getElementById("me"));console.log(a);/*window.setInterval(function(){console.log(a.callback(),a.count(),a.current(),a.rand())},2E3)*/}
+window.addEventListener?window.addEventListener("load",b,!1):window.attachEvent?window.attachEvent("onload",b):window.onload=b;</script>
 <h2>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
 
