--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <script>var a;function b(){
     var c=[];
     for(var d=1;d<51;d++) c.push("img ("+d+").jpg");
-    a=new direction(c,document.getElementById("me"),0,{dir:"images/"});console.log(a);window.setInterval(a.rand,5000)};
+    a=new direction(c,document.getElementById("me"),0,{dir:"images/"});console.log(a);a.scroll(false);window.setInterval(a.rand,5000)};
 window.addEventListener?window.addEventListener("load",b,!1):window.attachEvent?window.attachEvent("onload",b):window.onload=b;</script>
 <h2>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
