--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ window.addEventListener?window.addEventListener("load",b,!1):window.attachEvent?
     back<span class="pl-k">:</span> hexstring         <span class="pl-c">//the color of the back of the display canvas</span>
     jq<span class="pl-k">:</span> bool(<span class="pl-c1">true</span>/<span class="pl-c1">false</span>)    <span class="pl-c">//jQuery plugin, allows the use of direction anchored to</span>
     <span class="pl-c">//the elements of a jQuery selector. The anchor argument is ommitted. Only works with Plus.</span>
-    $(<span class="pl-s"><span class="pl-pds">"</span>#mycarousel).direction(input,overwrite,config)</span>
+    $(<span class="pl-s"><span class="pl-pds">"</span>#mycarousel").direction(input,overwrite,config)</span>
 <span class="pl-s">}</span></pre></div>
 
 <p>Now at this point, you'd probably be wondering why it isn't doing anything. All the other carousels, you've tried did moved around fancily flipping through images and stuff. You might even be prompted to ask, "Seun40, why isn't it doing anything?". And to that I answer, that's what it's supposed to do.</p>
