--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@ window.addEventListener?window.addEventListener("load",b,!1):window.attachEvent?
 
 <p><code>count()</code> - gets the total amount of slides</p>
 
+<p><code>data(index)</code> - gets information about the slide at index, such as name and url, defaults to current page</p>
+
 <p><code>scroll()</code> - gets/sets the status of the auto scroll. To auto scroll to the top of the page on slide change, set to true,. To disable, set it to false. It is true by default</p>
 
 <p><code>scrollTo(place,time)</code> - scroll to place in given time (milliseconds)</p>
