--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Direction.js by seun40</title>
+    <title>Direction.js by ogewan</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -19,11 +19,11 @@
       <header>
         <h1>Direction.js</h1>
         <p>The carousel that doesn&#39;t do anything!</p>
-        <p class="view"><a href="https://github.com/seun40/direction.js">View the Project on GitHub <small>seun40/direction.js</small></a></p>
+        <p class="view"><a href="https://github.com/ogewan/direction.js">View the Project on GitHub <small>ogewan/direction.js</small></a></p>
         <ul>
-          <li><a href="https://github.com/seun40/direction.js/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/seun40/direction.js/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/seun40/direction.js">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/ogewan/direction.js/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ogewan/direction.js/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ogewan/direction.js">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -100,7 +100,7 @@ window.addEventListener?window.addEventListener("load",b,!1):window.attachEvent?
     $(<span class="pl-s"><span class="pl-pds">"</span>#mycarousel"</span>).<span class="pl-en">direction</span>(input,overwrite,config);
 }</pre></div>
 
-<p>Now at this point, you'd probably be wondering why it isn't doing anything. All the other carousels, you've tried did moved around fancily flipping through images and stuff. You might even be prompted to ask, "Seun40, why isn't it doing anything?". And to that I answer, that's what it's supposed to do.</p>
+<p>Now at this point, you'd probably be wondering why it isn't doing anything. All the other carousels, you've tried did moved around fancily flipping through images and stuff. You might even be prompted to ask, "ogewan, why isn't it doing anything?". And to that I answer, that's what it's supposed to do.</p>
 
 <p>This carousel is pretty <strong>barebones</strong>. If you want it to do something, you'll probably have to write a lil script to do it for you. But fear not, its easy peasy.</p>
 
@@ -198,7 +198,7 @@ is a good guide</p>
       </section>
     </div>
     <footer>
-      <p>Project maintained by <a href="https://github.com/seun40">seun40</a></p>
+      <p>Project maintained by <a href="https://github.com/ogewan">ogewan</a></p>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
