--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <!-- End Jekyll SEO tag -->
 
 
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <script src="/assets/js/scale.fix.js"></script>
+    <link rel="stylesheet" href="/direction.js/assets/css/style.css">
+    <script src="/direction.js/assets/js/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
