--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ slidend();//Called after slide transition finishes
 <h2 id="browser-support">Browser Support</h2>
 <p>requestAnimationFrame has replaced setTimeout, so this is now the major limiting factor.</p>
 
-<p>See https://caniuse.com/#feat=requestanimationframe/.</p>
+<p>See <a>https://caniuse.com/#feat=requestanimationframe/</a>.</p>
 
 <h2 id="todo">TODO</h2>
 <ul>
