--- a/index.1.html
+++ b/index.1.html
@@ -2,25 +2,25 @@
 <script src="directionx.js"></script>
 <script src="lib/gpu-browser.min.js"></script>
 <style>
-body {
-    background-color: springgreen;
-}
+    body {
+        background-color: springgreen;
+    }
 </style>
 <script>
     var a, b, c, d;
 
     function b() {
         a = new direction(
-                "oots0001.gif oots0002.gif oots0003.gif oots0004.gif oots0005.gif oots0006.gif oots0007.gif oots0008.gif oots0009.gif oots0010.gif oots0011.gif oots0012.gif oots0013.gif oots0014.gif oots0015.gif oots0016.gif oots0017.gif oots0018.gif oots0019.gif oots0020.gif".split(" "),
-                {dir: "assets/", disableSpin: false, gpu: GPU}
-            );
+            "oots0001.gif oots0002.gif oots0003.gif oots0004.gif oots0005.gif oots0006.gif oots0007.gif oots0008.gif oots0009.gif oots0010.gif oots0011.gif oots0012.gif oots0013.gif oots0014.gif oots0015.gif oots0016.gif oots0017.gif oots0018.gif oots0019.gif oots0020.gif".split(" "),
+            { dir: "assets/", disableSpin: false, gpu: GPU, size: { scaleToWidth: true, scaleToHeight: true } }
+        );
         console.log(a);
     }
     function c() {
         if (d) {
             window.clearInterval(d);
         } else {
-            d = window.setInterval(function() { a.rand(); }, 2E3);
+            d = window.setInterval(function () { a.rand(); }, 2E3);
         }
     }
     window.addEventListener ? window.addEventListener("load", b, !1) : window.attachEvent ? window.attachEvent("onload", b) : window.onload = b;
